--- a/static/css/style.css
+++ b/static/css/style.css
@@ -323,13 +323,13 @@ blockquote {
 }
 
 .buy_bt li a:hover {
-    background-color: #f5ddb6;
-    color: #ffffff;
+    background-color: #D4E574;
+    color: #000000;
 }
 
 .buy_bt li.active a {
-    background-color: #f5ddb6;
-    color: #fff;
+    background-color:  #D4E574;
+    color: #000000;
 }
 
 .price_text {
@@ -340,28 +340,54 @@ blockquote {
     text-align: right;
 }
 
+.text_02 {
+    font-size: 18px;
+      letter-spacing: 1px;
+      color: #000000;
+    line-height: 1.5;
+    font-family:verdana	
+  }
+
+.assignbt li a {
+    float: left;
+    font-size: 12px;
+    color: #FFFFFF;
+    padding: 5px 10px;
+    background-color: #0f0d0d;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    border-radius: 40px;
+    width:160px;
+    text-align:center;
+}
+
+.assignbt li a:hover {
+    background-color: #D4E574;
+    color: #000000;
+}
+
 .seemore_bt {
-    width: 170px;
+    width: 110px;
     margin: 0 auto;
     padding-top: 60px;
+    color: #FFFFFF;
 }
 
 .seemore_bt a {
     width: 100%;
     float: left;
-    font-size: 16px;
-    color: #ffffff;
+    font-size: 14px;
+    color: #FFFFFF;
     background-color: #252525;
     text-align: center;
-    padding: 10px 0px;
+    padding: 1px 0px;
     border-radius: 5px;
-    font-weight: bold;
     text-transform: uppercase;
 }
 
 .seemore_bt a:hover {
-    color: #ffffff;
-    background-color: #f5ddb6;
+    color: #000000;
+    background-color: #D4E574;
 }
 
 
