--- a/templates/athleteprofile.html
+++ b/templates/athleteprofile.html
@@ -5,27 +5,19 @@
 {% endblock body %}
 
 {% block main %}
-<style>
-.text_02 {
-  font-size: 18px;
-	letter-spacing: 1px;
-	color: #000000;
-  line-height: 1.5;
-  font-family:verdana	
-}
 
-</style>
-{% for item in docs %}
+
+
 <div class="row" style="position:relative;top:10%;left:20%">
   <div class="column" style= "width:18%">
-    <img src="static/uploads/{{item.profileimg}}" alt="Profile Picture" class="rounded-circle" width="150" style="position:relative; top:10%; left:19%">
+    <img src="static/uploads/{{details.athlete.profileimg}}" alt="Profile Picture" class="rounded-circle" width="150" style="position:relative; top:10%; left:19%">
   </div>
 
   <div class="column text_02"><br>
-    <div style="margin-bottom: 10px">Name: {{item.fullname}}  </div>
-    <div style="margin-bottom: 10px">Age: {{item.age}}  </div>
-    <div style="margin-bottom: 10px">Sport: {{item.sport}}</div>
-    <div style="margin-bottom: 10px">Rank: {{item.rank}}</div>
+    <div style="margin-bottom: 10px">Name:  {{details.athlete.firstname}}&nbsp;{{details.athlete.surname}}  </div>
+    <div style="margin-bottom: 10px">Age: {{details.athlete.age}}  </div>
+    <div style="margin-bottom: 10px">Sport: {{details.athlete.sport}}</div>
+    <div style="margin-bottom: 10px">Rank: {{details.athlete.rank}}</div>
   </div>
   
 </div>
@@ -37,38 +29,38 @@
 
   <!-- Full-width images with number text -->
 
-   {% if item.filename1 != "" %}
+   {% if details.athlete.filename1 != "" %}
   <div class="mySlides">
-    <div class="numbertext">1 /{{item.counter}}</div>
-    <img src="static/uploads/{{item.filename1}}" style="width:100%">
+    <div class="numbertext">1 /{{details.athlete.counter}}</div>
+    <img src="static/uploads/{{details.athlete.filename1}}" style="width:100%">
   </div>
    {% endif %}
 
-   {% if item.filename2 != "" %}
+   {% if details.athlete.filename2 != "" %}
     <div class="mySlides">
-    <div class="numbertext">2 / {{item.counter}}</div>
-    <img src="static/uploads/{{item.filename2}}" style="width:100%">
+    <div class="numbertext">2 / {{details.athlete.counter}}</div>
+    <img src="static/uploads/{{details.athlete.filename2}}" style="width:100%">
     </div>
    {% endif %}
 
-  {% if item.filename3 != "" %}
+  {% if details.athlete.filename3 != "" %}
    <div class="mySlides">
-   <div class="numbertext">3 /{{item.counter}}</div>
-   <img src="static/uploads/{{item.filename3}}" style="width:100%">
+   <div class="numbertext">3 /{{details.athlete.counter}}</div>
+   <img src="static/uploads/{{details.athlete.filename3}}" style="width:100%">
    </div>
   {% endif %}
 
-  {% if item.filename4 != "" %}
+  {% if details.athlete.filename4 != "" %}
    <div class="mySlides">
-   <div class="numbertext">4 /{{item.counter}}</div>
-   <img src="static/uploads/{{item.filename4}}" style="width:100%">
+   <div class="numbertext">4 /{{details.athlete.counter}}</div>
+   <img src="static/uploads/{{details.athlete.filename4}}" style="width:100%">
    </div
   {% endif %}
 
-  {% if item.filename|length>2 %}
+  {% if details.athlete.filename|length>2 %}
    <div class="mySlides">
-   <div class="numbertext">5 /{{item.counter}}</div>
-   <img src="static/uploads/{{item.filename5}}" style="width:100%">
+   <div class="numbertext">5 /{{details.athlete.counter}}</div>
+   <img src="static/uploads/{{details.athlete.filename5}}" style="width:100%">
   </div
   {% endif %}
 
@@ -83,29 +75,29 @@
 
   <!-- Thumbnail images -->
   <div class="row" >
-    {% if item.filename1 != "" %}
+    {% if details.athlete.filename1 != "" %}
     <div class="column" style="width:150px;height:90px;">
-      <img class="demo cursor" src="static/uploads/{{item.filename1}}" style="width:100%;height:100%;" onclick="currentSlide(1)">
+      <img class="demo cursor" src="static/uploads/{{details.athlete.filename1}}" style="width:100%;height:100%;" onclick="currentSlide(1)">
     </div>
     {% endif %}
-    {% if item.filename2 != "" %}
+    {% if details.athlete.filename2 != "" %}
     <div class="column" style="width:150px;height:90px;">
-      <img class="demo cursor" src="static/uploads/{{item.filename2}}" style="width:100%;height:100%;" onclick="currentSlide(2)">
+      <img class="demo cursor" src="static/uploads/{{details.athlete.filename2}}" style="width:100%;height:100%;" onclick="currentSlide(2)">
     </div>
     {% endif %}
-    {% if item.filename3 != "" %}
+    {% if details.athlete.filename3 != "" %}
     <div class="column" style="width:150px;height:90px;">
-      <img class="demo cursor" src="static/uploads/{{item.filename3}}" style="width:100%height:100%;" onclick="currentSlide(3)">
+      <img class="demo cursor" src="static/uploads/{{details.athlete.filename3}}" style="width:100%height:100%;" onclick="currentSlide(3)">
     </div>
     {% endif %}
-    {% if item.filename4 != "" %}
+    {% if details.athlete.filename4 != "" %}
     <div class="column" style="width:150px;height:90px;">
-      <img class="demo cursor" src="static/uploads/{{item.filename4}}" style="width:100%;height:100%;" onclick="currentSlide(4)">
+      <img class="demo cursor" src="static/uploads/{{details.athlete.filename4}}" style="width:100%;height:100%;" onclick="currentSlide(4)">
     </div>
     {% endif %}
-    {% if item.filename5 != "" %}
+    {% if details.athlete.filename5 != "" %}
     <div class="column" style="width:150px;height:90px;">
-      <img class="demo cursor" src="static/uploads/{{item.filename5}}" style="width:100%;height:100%;" onclick="currentSlide(5)">
+      <img class="demo cursor" src="static/uploads/{{details.athlete.filename5}}" style="width:100%;height:100%;" onclick="currentSlide(5)">
     </div>
     {% endif %}
     
@@ -121,57 +113,40 @@
           <div class="col-sm-3">                
             <div class="row">
               <h2 class="mb-0">Achievements</h2>
-              <div class="x" style="font-size:21px">
-                {{item.achievements}}
+              <div class="x" style="font-size:16px">
+                {{details.athlete.achievements}}
               </div>
             </div>
             <hr>
             <div class="row">
                 <h2 class="mb-0">Best Record</h2>
-                <div class="x" style="font-size:21px">
-                  {{item.bestrecord}}
+                <div class="x" style="font-size:16px">
+                  {{details.athlete.bestrecord}}
                 </div>
               </div>
               <hr>                  
               <div class="row">
                 <h2 class="mb-0">Coach</h2>
-                <div class="x" style="font-size:21px">
-                  
-                </div>
+                <div class="x" style="font-size:16px">
+                  {{details.coach.firstname}}&nbsp;{{details.coach.surname}}
+                 </div>
               </div>
               <hr>
               <div class="row">
                 <h2 class="mb-0">Coach Contact</h2  >
-                <div class="x" style="font-size:21px">
-                  xxx
+                <div class="x" style="font-size:16px">
+                  {{details.coach.phoneno}}
                 </div>
               </div>
               <hr>
               <div class="row">
                 <div class="col-sm-12">
-                  <a class="btn btn-info " target="__blank" href="athleteprofileedit" style= "font-size:16px">Edit</a>
+                  <ul class="assignbt">
+                    <li><a href="athleteprofileedit">Edit Profile</a></li>
+                    
+                </ul>
+                 
                 </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-{% endfor %}
-
-<div class="container">
-  <div>
-    <div class="row gutters-sm">
-      <div class="card mb-3">
-        <div class="card-body">
-          <div class="col-sm-3">                
-            <div class="row">
-              <h2 class="mb-0">Coach's Comments</h2>
-              <div class="x" style="font-size:21px">
-                xxx
               </div>
             </div>
           </div>
