--- a/templates/requests.html
+++ b/templates/requests.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
 
 {% block main %}
+
+
 <body style= "background-color:#fef4ec">
     <div class="product_section layout_padding">
         <div class="container">
         <div class="row">
-            <div class="col-sm-12">
-                <h1 class="product_taital">Requests</h1>
+            <div class="col-sm-12" style="position:relative;top:5%;left:2%;">
+                <h1>{{title}}</h1>
             </div>
         </div>
    
             <div class="row" style="background-color:#fef4ec"></div>
-            
+            <!--
             <script>
               const textElement = document.getElementById("dynamicText");
               const initialTextLength = 0.05; // Initial textLength as a percentage of the SVG width
@@ -28,94 +30,33 @@
               adjustTextLength();
           </script>        
 
-<svg width="1500" height="180" style="position:relative;top:10%;left:-95px">
-  <g>
-      <rect x="50" y="20" rx="20" ry="20" width="1000" height="100" style="fill:white;stroke:black;stroke-width:5;opacity:0.5"/>
-      <text x="8%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">&nbsp; kjhnku jgbv dfvd</text>
-      <text x="17%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Coach</text>
-      <text x="28%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Amount Needed</text>
-      <text x="41%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Reason For Aid</text>
-    
-      <foreignObject x="55%" y="-5%" width="200" height="150">
-          <body>
-              <div class="seemore_bt"><a href="athleteprofile?id=athlete_id" style="color:white">See More</a></div>
-          </body>
-      </foreignObject>
-  </g>
-</svg>
-<svg width="1500" height="180" style="position:relative;top:10%;left:-95px">
-  <g>
-      <rect x="50" y="20" rx="20" ry="20" width="1000" height="100" style="fill:white;stroke:black;stroke-width:5;opacity:0.5"/>
-      <text x="8%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">&nbsp; kjhnku jgbv dfvd</text>
-      <text x="17%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Coach</text>
-      <text x="28%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Amount Needed</text>
-      <text x="41%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Reason For Aid</text>
-    
-      <foreignObject x="55%" y="-5%" width="200" height="150">
-          <body>
-              <div class="seemore_bt"><a href="athleteprofile?id=athlete_id" style="color:white">See More</a></div>
-          </body>
-      </foreignObject>
-  </g>
-</svg>
-  
-<svg width="1500" height="180" style="position:relative;top:10%;left:-95px">
-  <g>
-      <rect x="50" y="20" rx="20" ry="20" width="1000" height="100" style="fill:white;stroke:black;stroke-width:5;opacity:0.5"/>
-      <text x="8%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">&nbsp; kjhnku jgbv dfvd</text>
-      <text x="17%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Coach</text>
-      <text x="28%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Amount Needed</text>
-      <text x="41%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Reason For Aid</text>
-    
-      <foreignObject x="55%" y="-5%" width="200" height="150">
-          <body>
-              <div class="seemore_bt"><a href="athleteprofile?id=athlete_id" style="color:white">See More</a></div>
-          </body>
-      </foreignObject>
-  </g>
-</svg>
+            -->
 
-<svg width="1500" height="180" style="position:relative;top:10%;left:-95px">
-  <g>
+          <div class="row" >
+           
+          {% for item in docs %}
+     <svg width="1500" height="180" style="position:relative;top:10%;left:-50px">
+     <g>
       <rect x="50" y="20" rx="20" ry="20" width="1000" height="100" style="fill:white;stroke:black;stroke-width:5;opacity:0.5"/>
-      <text x="8%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">&nbsp; kjhnku jgbv dfvd</text>
-      <text x="17%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Coach</text>
-      <text x="28%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Amount Needed</text>
-      <text x="41%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">Reason For Aid</text>
+      <text x="8%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">{{item.request_subject}}</text>
+      <text x="17%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">{{item.request_amt}}</text>
+      <text x="28%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">{{item.request_enddate}}</text>
+      <text x="41%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" id="dynamicText">{{item.description}}</text>
     
       <foreignObject x="55%" y="-5%" width="200" height="150">
           <body>
-              <div class="seemore_bt"><a href="athleteprofile?id=athlete_id" style="color:white">See More</a></div>
+              <div class="seemore_bt"><a href="requestdetails?requestID={{item._id}}" style="color:white">See More</a></div>
           </body>
       </foreignObject>
-  </g>
-</svg>
-  
-            <div class="seemore_bt"><a href="#" style="color:white">See More</a></div>
+   
+    </g>
+    </svg>
+          {% endfor %}
+        </div>
         </div>
         </div>
     </div>
-    <!-- Javascript files-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.0.0.min.js"></script>
-    <script src="js/plugin.js"></script>
-    <!-- sidebar -->
-    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="js/custom.js"></script>
-    <!-- javascript --> 
-    <script src="js/owl.carousel.js"></script>
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>  
-    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
-    <script>
-        function openNav() {
-        document.getElementById("mySidenav").style.width = "100%";
-        }
-        
-        function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-        }
-    </script> 
+
+    
 </body>
 {% endblock main %}
