--- a/templates/sign_up_coach.html
+++ b/templates/sign_up_coach.html
@@ -8,7 +8,7 @@
 {% block main %}
 <div class="container">
 		<div class="col-md-12">			
-			<form class="form-horizontal templatemo-login-form-2" role="form" action="#" method="post">
+			<form class="form-horizontal templatemo-login-form-2" role="form" action="#" method="post" enctype="multipart/form-data">
 				<div class="row">
 					<div class="col-md-12" style = "padding-top: 30px">
 						<h1>Sign up</h1>
@@ -80,12 +80,21 @@
 				            </div>
 				          </div>
 				        </div>
+						<div class="form-group">
+							<div class="col-md-12">
+								<i class="fa fa-photo"></i>
+								 <label for="profileimg" class="control-label">Profile Picture</label>
+							  <div class="templatemo-input-icon-container" style="display: inline-block; vertical-align: middle;">
+								 	<input type= "file" name="profileimg" id= "profileimg" onchange="fileValidation('profileimg')">							  </div>
+							</div>
+						  </div>
 				        <div class="form-group">
 							<div class="col-md-12">		          	
 							  <label for="username" class="control-label">Additional Info</label>
 							  <div class="templatemo-input-icon-container">
 								  <i class="fa "></i>
-								  <input type="text" class="form-control" id="additional_info" name="additional_info" placeholder="Enter Additional Info">
+								  <textarea name="additional_info" id="additional_info" class="form-control" rows="3" cols="50">Enter Additonal Info</textarea>
+								  
 							  </div>		            		            		            
 							</div>              
 						  </div>
@@ -94,9 +103,9 @@
 				            <input type="submit" value="SIGN UP" class="btn btn-warning">
 				          </div>
 				        </div>
-				        <div class="form-group">
+				        <div class="form-group" align="center">
 				          	<div class="col-md-12">
-				        	<a href="login" class="text-center"><span style="color: #09F">Login</a></span>
+				        	<a href="login" class="text-center"><span style="color:#FFFFFF">Login</a></span>
 
 				       	 	</div>
 				    	</div>
@@ -110,4 +119,8 @@
 		      </form>		      		      
 		</div>
 	</div>
+
+	<script src="static/js/formscripts.js"></script> 
+	
 {% endblock main %}
+
