--- a/templates/viewathletes.html
+++ b/templates/viewathletes.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block main %}
+
+
+
 <body style= "background-color:#fef4ec">
 
     <div class="product_section layout_padding">
@@ -8,28 +11,31 @@
             
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="product_taital">Our athletes</h1>
-                    <p class="product_text">insert text?</p>
+                    <h1>{{title}}</h1>
                 </div>
             </div>
 
 
-        
-               
                         
          <div class="product_section_2 layout_padding">
             <div class="row">
+                <div>
+                    {% set n= (count/12)|round|int %}
+                    {% for i in range(1,n) %}
+                      <a href="{{url_for('view_athletes',page=i)}}">{{i}}</a> &nbsp;
+                     {% endfor %}
+                 
+                </div>
                 {% for item in docs %}
                 <div class="col-lg-3 col-sm-6">
-                    <div class="product_box"><a href="athleteprofile">
-                        <h4 class="bursh_text">{{item.fullname}}</h4>
-                        <p class="lorem_text">{{item.email}}</p>
-                        <a href= {{url_for('athleteprofile',id=item._id)}}><img src="images/img-1.png" class="image_1"></a>
+                    <div class="product_box" ><a href="athleteprofile">
+                        <p class="lorem_text">{{item.firstname}} {{item.surname}}</p>
+                        <a href= {{url_for('athleteprofile',id=item._id)}}><img src="static/uploads/{{item.profileimg}}" class="image_1"></a>
                         <div class="btn_main">
                             <div class="buy_bt">
                                 <ul>
-                                    <li><a href="#">Add data</a></li>
-                                    <li><a href="createrequest">Add request</a></li>
+                                    <li><a href={{url_for('athleteprofile',id=item._id)}}>View Profile</a></li>
+                                    <li><a href={{url_for('athleteprofile',id=item._id)}}>View Blog</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -40,9 +46,8 @@
             </div>
             <div>
                     {% set n= (count/12)|round|int %}
-                    {% set n = n+1 %}
                     {% for i in range(1,n) %}
-                      <a href="{{url_for('view_players',page=i)}}">{{i}}</a> &nbsp;
+                      <a href="{{url_for('view_athletes',page=i)}}">{{i}}</a> &nbsp;
                      {% endfor %}
                  
             </div>
@@ -52,27 +57,6 @@
         </div>
     </div>
     
-    <!-- Javascript files-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.0.0.min.js"></script>
-    <script src="js/plugin.js"></script>
-    <!-- sidebar -->
-    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="js/custom.js"></script>
-    <!-- javascript --> 
-    <script src="js/owl.carousel.js"></script>
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>  
-    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
-    <script>
-        function openNav() {
-        document.getElementById("mySidenav").style.width = "100%";
-        }
-        
-        function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-        }
-    </script> 
+    <script src="static/js/formscripts.js"></script> 
 </body>
 {% endblock main %}
